openafs (1.4.0-2) unstable; urgency=low

  * Suggest the same PAM settings for pam_krb5 that libpam-krb5 does.
  * Update uploader address.

 --

openafs (1.4.0-1) unstable; urgency=low

  * New upstream version.
    - Builds correctly with 2.6.13 kernels and software suspend.
    - Builds correctly with 2.6.12-10.  (Closes: #337883)
  * Install afsd in /sbin rather than /usr/sbin.  While putting /usr in
    AFS isn't as common as it once was, no reason to make it harder than
    it needs to be.
  * Update CellServDB to the 2005-10-15 grand.central.org version.
  * Install NEWS as an upstream changelog.
  * Add a watch file.
  * Remove the unused and uninstalled make-links script.

 -- Russ Allbery <rra@stanford.edu>  Sun,  6 Nov 2005 21:37:40 -0800

openafs (1.4rc4-1) unstable; urgency=low

  * New upstream version.
    - Correctly handle root.afs becoming replicated after the client
      starts.  This should resolve the problems with AFS eventually
      failing on the first system using a new cell.  (Closes: #88906)
  * When kill_all_afs is enabled in /etc/openafs/afs.conf, only kill AFS
    processes if the runlevel is 0 or 6.  You really only want this when
    the system is shutting down.  (Closes: #325347)
  * Remove the init script check of the cache file system and instead
    improve the check in afsd.  The init script check used stat, which is
    in /usr/bin and therefore not fair game for init scripts.
  * Set PATH in the init script, just in case.
  * libpam-openafs-kaserver must depend on openafs-client, not just
    recommend it, since acquiring tokens requires that the client be
    running.
  * Expand README.Debian and include information about PAM configuration.
  * Link libpam-openafs-kaserver's doc directory to openafs-client.
  * Make the short descriptions shorter.
  * Translation updates.
    - Portuguese (Brazil), thanks André Luís Lopes.

 -- Russ Allbery <rra@stanford.edu>  Wed, 21 Sep 2005 13:36:34 -0700
