@@ -5,13 +5,6 @@
   with a style sheet to set off the transcript in a different background
   color).
 
-* The way the module packages are generated could stand to be simplified
-  considerably.  Much of what prep-modules does is not actually necessary
-  and just makes the script hard to read.  Also, rethink whether both
-  control.module and control.module-image are needed, and try to use
-  substvars to handle the control.module variables rather than dynamically
-  generating the control file.
-
 * Include some of the other random useful AFS programs in openafs-client
   (scout, vlclient, fstrace, up).
 
