@@ -2,16 +2,19 @@ Source: openafs
 Section: net
 Priority: optional
 Maintainer: Sam Hartman <hartmans@debian.org>
+Uploaders: Russ Allbery <rra@debian.org>
+Build-Depends: debhelper (>= 4.1.16), flex, bison
 Standards-Version: 3.6.2
 
 Package: openafs-modules-=KVERS
 Conflicts: openafs-client (<< 1.2.9)
 Provides: openafs-modules2
 Architecture: any
-Description: The AFS distributed filesystem- Kernel Module
+Recommends: =IMG-=KVERS
+Description: AFS distributed filesystem kernel module
  AFS is a distributed filesystem allowing cross-platform sharing of
  files among multiple computers.  Facilities are provided for access
  control, authentication, backup and administrative management.
  .
  This package provides the compiled AFS kernel module for kernel
- =KVERS.
+ version =KVERS.
