@@ -1,19 +1,0 @@
-Source: openafs
-Section: net
-Priority: optional
-Maintainer: Sam Hartman <hartmans@debian.org>
-Standards-Version: 3.6.2
-
-Package: openafs-modules-=KVERS
-Conflicts: openafs-client (<< 1.2.9)
-Provides: openafs-modules2
-Architecture: any
-Recommends: kernel-image-=KVERS (= =KREVS)
-Description: The AFS distributed filesystem- Kernel Module
- AFS is a distributed filesystem allowing cross-platform sharing of
- files among multiple computers.  Facilities are provided for access
- control, authentication, backup and administrative management.
- .
- This package provides the compiled AFS kernel module for kernel
- =KVERS.
- 
