@@ -1,9 +1,18 @@
 openafs (1.4.0-2) unstable; urgency=low
 
+  * Overhaul the way kernel modules are built.
+    - Recommend linux-image rather than kernel-image for newer kernels.
+    - Always recommend the kernel package; since it's only a recommends,
+      there's no need to special-case the hand-built kernel case.
+    - Be less fragile about how the kernel version is used in prep-modules
+      to support other ways kernel modules are built.  (Closes: #341836)
+    - Add Build-Depends and Uploaders to the openafs-modules-source
+      control file.
+    - Remove unused parts of prep-modules and heavily comment it.
   * Suggest the same PAM settings for pam_krb5 that libpam-krb5 does.
   * Update uploader address.
 
- --
+ -- Russ Allbery <rra@debian.org>  Tue,  6 Dec 2005 13:20:05 -0800
 
 openafs (1.4.0-1) unstable; urgency=low
 
